# JanDi-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  main.py  models.1.py  models.py  pyproject.toml  requirements.txt  test.db
domain/account/: account_crud.1.py  account_crud.py  account_router.1.py  account_router.py  account_schema.1.py  account_schema.py
domain/debug/: debug_router.py
domain/fin/: fin_router.py
domain/fin/codef/: codef.py
domain/fin/kis/: KIS20250630  KIS20250703  KIS20250704  KIS20250705  KIS20250706  KIS20250707  KIS20250708  KIS20250709  KIS20250710  KIS20250711  KIS20250712  KIS20250713  KIS20250714  kis_auth.py  kis_domstk.py
domain/fin/kis/backup/: kis_domstk_doc.py  kis_domstk_origin.py
domain/open_api/: codef_client.py
domain/spare_change/: spare_change_crud.1.py  spare_change_crud.py  spare_change_router.1.py  spare_change_router.py  spare_change_schema.1.py  spare_change_schema.py
domain/user/: user_crud.1.py  user_crud.py  user_router.py  user_schema.py
domain/utils/: crypto.py
frontend/: package-lock.json  package.json
frontend/backup/: store.js
frontend/backup/components/atoms/: Divider.jsx
frontend/backup/components/molecules/: DomesticPriceSection.jsx  LoginView.jsx  OverseasPriceSection.jsx  RealtimeSection.jsx  SignupView.jsx  TransactionsSection.jsx
frontend/backup/components/organisms/: Dashboard.jsx
frontend/backup/components/templates/: DemoTemplate.jsx
frontend/backup/lib/: fastapi.js
frontend/src/: App.jsx  store.js
frontend/src/components/atoms/: Button.jsx  Input.jsx
frontend/src/components/molecules/accounts/: AccountDetail.jsx  AccountList.jsx  AccountRegister.jsx  AccountTest.jsx
frontend/src/components/molecules/common/: LoginPage.jsx  SignupPage.jsx
frontend/src/components/molecules/investments/: DomesticPriceSection.jsx  OverseasPriceSection.jsx  RealtimeSection.jsx  TransactionsSection.jsx
frontend/src/components/molecules/jandon/: DebugSyncButton.jsx  JandonTest.jsx
frontend/src/components/organisms/: Accounts.jsx  Investments.jsx  Jandon.jsx
frontend/src/components/templates/: DemoTemplate.jsx
frontend/src/lib/: fastapi.js
scheduler/: celery_app.py  tasks.py
