[project]
name = "fastapi-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "aiosqlite==0.17.0",
    "alembic==1.8.1",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.27.0",
    "bcrypt==4.0.1",
    "beautifulsoup4==4.13.4",
    "billiard==4.2.1",
    "celery==5.5.3",
    "certifi==2025.6.15",
    "cffi==1.15.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cryptography==38.0.1",
    "dbus-python==1.2.18",
    "dnspython==2.2.1",
    "ecdsa==0.18.0",
    "email-validator==2.2.0",
    "fastapi==0.115.14",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.4",
    "finance-datareader==0.9.96",
    "greenlet==1.1.3.post0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kombu==5.5.4",
    "lxml==6.0.0",
    "mako==1.2.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "narwhals==1.45.0",
    "numpy==2.3.1",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.3.0",
    "passlib==1.7.4",
    "plotly==6.2.0",
    "prompt-toolkit==3.0.51",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.4.8",
    "pycairo==1.28.0",
    "pycparser==2.21",
    "pycryptodome==3.23.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pygobject==3.42.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "requests==2.32.4",
    "requests-file==2.1.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "rignore==0.5.1",
    "rsa==4.9",
    "sentry-sdk==2.32.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.12",
    "starlette==0.46.2",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "urllib3==2.5.0",
    "uv==0.7.20",
    "uvicorn==0.35.0",
    "uvloop==0.17.0",
    "vine==5.1.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
]
